Fix font size on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,6 @@ table {
 }
 
 table caption {
-  font-size: 1.5em;
   margin: .5em 0 .75em;
 }
 
